--- a/templates/cursos/landingCompe.html
+++ b/templates/cursos/landingCompe.html
@@ -25,7 +25,7 @@
                         <td>{{ competencia.Competencia }}</td>
                         <td>
                             <a class="btn btn-info btn-sm" href="{% url 'updateCompe' competencia.id %}">Editar</a>
-                            <a class="btn btn-info btn-sm" href="{% url 'deleteCompe' competencia.id %}">RA</a>
+                            <a class="btn btn-info btn-sm" href="{% url 'landingRA' competencia.id %}">RA</a>
                             <a class="btn btn-danger btn-sm" href="{% url 'deleteCompe' competencia.id %}">Eliminar</a>
 
                         </td>
