--- a/templates/cursos/landingRA.html
+++ b/templates/cursos/landingRA.html
@@ -4,13 +4,13 @@
     Cursos
 {% endblock %}
 {% block content %}
-    <a href="/cursos/addCompe/{{ tags.id }}" class="pull-right btn btn-success" role="button">Agregar</a>
+    <a href="#" class="pull-right btn btn-success" role="button">Agregar</a>
 
         <table class="text-center table table-bordered">
 
         <thead>
         <tr>
-            <td>Competencia</td>
+            <td>Resultado De Aprendizaje</td>
             <td>Acciones</td>
 
         </tr>
@@ -18,15 +18,13 @@
         </thead>
         <tbody>
         {% if object_list %}
-            <h1> Competencias para {{ tags }} </h1>
-            {% for competencia in object_list %}
-                {% if competencia.Curso_id ==  tags.id  %}
+            <h1> Competencias para {{ Compe.Competencia }} </h1>
+            {% for RA in object_list %}
+                {% if RA.Competencia_id ==  Compe.id  %}
                     <tr>
-                        <td>{{ competencia.Competencia }}</td>
+                        <td>{{ RA.Verbo }} {{ RA.Contenidos }}, {{ RA.Contexto }}, {{ RA.Proposito }}</td>
                         <td>
-                            <a class="btn btn-info btn-sm" href="{% url 'updateCompe' competencia.id %}">Editar</a>
-                            <a class="btn btn-info btn-sm" href="{% url 'deleteCompe' competencia.id %}">RA</a>
-                            <a class="btn btn-danger btn-sm" href="{% url 'deleteCompe' competencia.id %}">Eliminar</a>
+
 
                         </td>
                     </tr>
