--- a/templates/cursos/deleteCompe.html
+++ b/templates/cursos/deleteCompe.html
@@ -5,6 +5,6 @@
 	{% csrf_token %}
 	<h3>¿Desea eliminar la competencia "{{ Competencias.Competencia }}" del curso {{ Curso.Nombre }}?</h3>
 	<button class="btn btn-danger" type="submit">Sí, eliminar</button>
-	<a class= "btn btn-default" href="{% url 'landingCursos' %}">Cancelar</a>
+	<a class= "btn btn-default" href="{% url 'designCurso' Curso.id %}">Cancelar</a>
 </form>
 {% endblock %}
